# kde-thumbnailer-mp4cover

./: .gitignore  CMakeLists.txt  README.md  mp4coverthumbnail.desktop  mp4coverthumbnailer.cpp  mp4coverthumbnailer.h  mp4coverthumbnailsettings5.kcfg  mp4coverthumbnailsettings5.kcfgc
ffmpegthumbnailer/: moviedecoder.cpp
